# disciplina_lbm

./: .gitignore  CMakeLists.txt
cases/blank/: CMakeLists.txt  user.hpp
cases/channel/: CMakeLists.txt  plot.py  user.hpp
cases/homogeneousTurbulence/: CMakeLists.txt  user.hpp
cases/lambOseen/: user.hpp
cases/shearWaveDecay/: CMakeLists.txt  shearWaveDecay.cpp  user.hpp
cases/taylorGreen/: CMakeLists.txt  plot.py  readVTI.py  user.hpp
cases/taylorGreen3D/: plot.py  user.hpp
include/: Geometry.hpp  Initialization.hpp  Logger.hpp  Neighbors.hpp  Output.hpp  Problem.hpp  Simulation.hpp  Streaming.hpp  Timer.hpp
include/boundary/: BounceAndBack.hpp  BoundaryModel.hpp  HalfwayBounceAndBack.hpp  Periodic.hpp
include/collision/: BGK.hpp  CollisionModel.hpp  MRT.hpp
include/lattice/: D2Q5.hpp  D2Q9.hpp  D3Q19.hpp  LatticeModel.hpp
include/vtkio/: xmlvtk.h
src/: Geometry.cpp  Initialization.cpp  LBMDriver.cpp  Logger.cpp  Neighbors.cpp  Output.cpp  Streaming.cpp  Timer.cpp  main.cpp  nonEqMoments.py
src/boundary/: BounceAndBack.cpp  Periodic.cpp
src/collision/: BGK.cpp  MRT.cpp
src/lattice/: D2Q5.cpp  D2Q9.cpp  D3Q19.cpp
src/vtkio/: xmlvtk.cpp
